--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -3,7 +3,8 @@ title: Index Page
 image: stache.png
 ---
 
-<main id="root">
+<main class="index">
     <h1>{{title}}</h1>
     <img src="/build/images/{{image}}" alt="Stache">
+    {{> list arg1=title n=20 }}
 </main>
