--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -4,7 +4,7 @@ image: stache.png
 ---
 
 <main class="index">
-    <h1>{{title}}</h1>
+    <h1>Hello {{title}}</h1>
     <img src="/build/images/{{image}}" alt="Stache">
     {{> list arg1=title n=20 }}
 </main>
