--- a/source/pages/index.html
+++ b/source/pages/index.html
@@ -5,6 +5,6 @@ image: stache.png
 
 <main class="index">
     <h1>{{title}}</h1>
-    <img src="/build/images/{{image}}" alt="Stache">
-    {{> list arg1=title n=20 }}
+    <img src="images/{{image}}" alt="Stache">
+    {{> list arg1=title n=2 }}
 </main>
