--- a/source/pages/blank.html
+++ b/source/pages/blank.html
@@ -1,11 +1,11 @@
 ---
-title: Stache App
+title: Edit Me
 ---
 
 <main class="index">
     <div class="container">
         <div class="wrapper">
-            {{> counter }}
+            <h1>{{title}}</h1>
         </div>
     </div>
 </main>
